# website-core

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  db.sqlite3  pyproject.toml
portfolio/: admin.py  models.py  urls.py  views.py
portfolio/static/plugins/diamond-gallery/src/: diamonds.css  jquery.diamonds.js
portfolio/static/scripts/: mobilenav.js  smoothscroll.js
portfolio/templates/footer/: index.html
portfolio/templates/home/: index.html
portfolio/templates/navigation/: index.html
portfolio/templates/portfolio/: index.html
portfolio/templates/tailwind/: tailwindcss.html
portfolio/templates/techstack/: index.html
portfolio/templates/works/: index.html
website/: manage.py
website/project/: urls.py
website/project/settings/: __init__.py  base.py
website/project/settings/templates/: settings.dev.py
