[tool.poetry]
name = "my-website"
version = "0.1.0"
description = ""
authors = ["jhonejhee <jhonejheepatacsil@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-split-settings = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
