[tool.poetry]
name = "my-website"
version = "0.1.0"
description = ""
authors = ["jhonejhee <jhonejheepatacsil@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
django-split-settings = "^1.2.0"
django-tailwind = "^3.6.0"
npm = "^0.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
